assets/style.css
body {
    font-family: 'Roboto Condensed', sans-serif;
    margin: 0;
    padding: 0;
    background-color: #d6e4f0;
    /*background-image: url('../img/background.jpg');*/
    background-repeat: no-repeat;
    /*background-attachment: fixed;*/
    background-size: cover;
}

.container {
    width: 80%;
    margin: 0 auto;
    padding: 20px;
    background-color: #f6f6f6;
    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
}

.container h1 {
    color: #333;
    font-size: 2em;
}

.container p {
    color: #3b3b3b;
    line-height: 1.6;
}
#mainNav {
    background-color: #000000;

}
#navbar {
    background-color: #000000;
}
.navbar-light {
    color: #ffffff;
    background-color: #000000;

}

.navbar {
    background-color: #163172 !important;
}


.navbar .nav-link,
.navbar .dropdown-item {
    color: #f6f6f6 !important;
}
.navbar-brand{
    /* font paska nawigacji */
    font-family: "Freeman", sans-serif;
    font-weight: 400;
    font-style: normal;

    color: #f6f6f6 !important;
    display: flex;
    text-align: left;
}
.navbar-toggler {
    background-color: #f6f6f6 !important;
}

.dropdown-menu {
    background-color:  #23005a !important;
    border: 2px solid #f6f6f6;
}

.dropdown-menu .dropdown-item:hover {
    background-color: #f6f6f6 !important;
    color: #23005a !important;
}

.navbar-nav {
    flex-direction: row;
    justify-content: center;
    color: #000000;
    /*background-color: #f8f9fa;*/
    /*background-image: url('../img/menu_background.jpg');*/
}

.navbar-nav .nav-item {
    margin: 0 10px;
}

.flex_containter {
    display: flex;
    justify-content: center;
    align-items: center;
    
}
.container_organisers {
    width: 80%;
    margin: 0 auto;
    padding: 20px;
    background-color: #f6f6f6;
    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
    align-items: center;

}

.profile{
    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
    background-color: #f6f6f6;
    display: flex;
    justify-content: left;
    margin: 1%;
    padding: 1%;

}

.profile_photo{
    margin: 1%;
    width: 150px;
    height: 150px;
    border-radius: 50%;
}

.profile_info{
    margin: 1%;
    padding: 1%;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.freeman-regular {
    font-family: "Freeman", sans-serif;
    font-weight: 400;
    font-style: normal;
  }

#id_contact_organizators_container {
    margin-top: 2%;
}
.attraction{
    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
    background-color: #f6f6f6;
    display: flex;
    justify-content: center;
    margin: 1%;
    padding: 1%;
    flex-direction: column;
    
}
.logo{
    display: flex;
    width: 50px;
    height: 50px;
    /*!*align-items: left;*! ej bo to nie dziala*/
}

.social_media{
    display: flex;
    justify-content: center;
    margin: 1%;
    padding: 1%;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
    text-wrap: wrap;
}

@media (max-width: 768px) {
    .navbar-brand {
        font-size: 1em;
    }
    .navbar-collapse {
        position: fixed;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background-color: rgba(0, 0, 0, 0.9);
        overflow: auto;
        transition: all 0.3s ease-in-out;
        transform: translateX(-100%);
    }

    .navbar-collapse.show {
        transform: translateX(0);
    }

    .navbar-nav {
        flex-direction: column;
        align-items: center;
        justify-content: center;
        height: 100%;
    }

    .nav-item {
        margin: 20px 0;
    }

    .nav-link {
        font-size: 1.2em;
        padding: 15px 20px; /* Zwiększamy padding */
        cursor: pointer; /* Dodajemy styl kursora */
    }

    .container {
        width: 100%;
        padding: 10px;
    }

    .profile, .attraction, .social_media {
        flex-direction: column;
        align-items: center;
    }

    .profile_photo, .logo {
        margin: 0 auto;
    }

    .dropdown-menu {
        position: relative;
        transform: none;
        top: auto;
        right: auto;
    }
}

